--- a/api/src/main/resources/templates/work-order-report.html
+++ b/api/src/main/resources/templates/work-order-report.html
@@ -29,7 +29,7 @@
         <div class="col-xs-12">
             <div class="invoice-title">
                 <h3 th:text="${companyName}"></h3>
-                <h3 class="pull-right primary" th:text="#{wo_number(${workOrder.id})}"></h3>
+                <h3 class="pull-right primary" th:text="#{wo_number(${workOrder.customId})}"></h3>
             </div>
             <hr>
             <div class="row">
