--- a/api/src/main/resources/templates/invite.html
+++ b/api/src/main/resources/templates/invite.html
@@ -17,7 +17,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <!-- LOGO -->
     <tr>
-        <td bgcolor="#09b3aa" align="center">
+        <td bgcolor="#2e9df9" align="center">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"></td>
@@ -26,7 +26,7 @@
         </td>
     </tr>
     <tr>
-        <td bgcolor="#09b3aa" align="center" style="padding: 0px 10px 0px 10px;">
+        <td bgcolor="#2e9df9" align="center" style="padding: 0px 10px 0px 10px;">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td bgcolor="#ffffff" align="center" valign="top"
@@ -55,12 +55,12 @@
                                 <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="border-radius: 3px;" bgcolor="#09b3aa"><a
+                                            <td align="center" style="border-radius: 3px;" bgcolor="#2e9df9"><a
                                                     th:href="${joinLink}"
 
 
                                                     target="_blank"
-                                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #09b3aa; display: inline-block;"
+                                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #2e9df9; display: inline-block;"
                                                     th:text="#{joinCompany}"></a></td>
                                         </tr>
                                     </table>
@@ -83,13 +83,13 @@
         <td bgcolor="#f4f4f4" align="center" style="padding: 30px 10px 0px 10px;">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
-                    <td bgcolor="#FFECD1" align="center"
+                    <td bgcolor="white" align="center"
                         style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                         <h2 style="font-size: 20px; font-weight: 400; color: #111111; margin: 0;"
                             th:text="#{needHelp}"></h2>
                         <p style="margin: 0;"><a th:href="${featuresLink}"
 
-                                                 target="_blank" style="color: #09b3aa;" th:text="#{hereToHelp}"></a>
+                                                 target="_blank" style="color: #2e9df9;" th:text="#{hereToHelp}"></a>
                         </p>
                     </td>
                 </tr>
