--- a/api/src/main/resources/templates/new-purchase-order.html
+++ b/api/src/main/resources/templates/new-purchase-order.html
@@ -17,7 +17,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <!-- LOGO -->
     <tr>
-        <td bgcolor="#2e9df9" align="center">
+        <td bgcolor="#00a0e3" align="center">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"></td>
@@ -26,7 +26,7 @@
         </td>
     </tr>
     <tr>
-        <td bgcolor="#2e9df9" align="center" style="padding: 0px 10px 0px 10px;">
+        <td bgcolor="#00a0e3" align="center" style="padding: 0px 10px 0px 10px;">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td bgcolor="#ffffff" align="center" valign="top"
@@ -56,12 +56,12 @@
                                 <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="border-radius: 3px;" bgcolor="#2e9df9"><a
+                                            <td align="center" style="border-radius: 3px;" bgcolor="#00a0e3"><a
                                                     th:href="${purchaseOrderLink}"
 
 
                                                     target="_blank"
-                                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #2e9df9; display: inline-block;"
+                                                    style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #00a0e3; display: inline-block;"
                                                     th:text="#{seeDetails}"></a></td>
                                         </tr>
                                     </table>
@@ -90,7 +90,7 @@
                             th:text="#{needHelp}"></h2>
                         <p style="margin: 0;"><a th:href="${featuresLink}"
 
-                                                 target="_blank" style="color: #2e9df9;" th:text="#{hereToHelp}"></a>
+                                                 target="_blank" style="color: #00a0e3;" th:text="#{hereToHelp}"></a>
                         </p>
                     </td>
                 </tr>
