--- a/api/src/main/resources/templates/reset-password.html
+++ b/api/src/main/resources/templates/reset-password.html
@@ -47,7 +47,7 @@
                 <tr>
                     <td bgcolor="#ffffff" align="left"
                         style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;" th:text="#{resetPwdMessage(${password})}"></p>
+                        <p style="margin: 0;" th:utext="#{resetPwdMessage(${password})}"></p>
                     </td>
                 </tr>
                 <tr>
@@ -58,7 +58,7 @@
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
                                             <td align="center" style="border-radius: 3px;" bgcolor="#00a0e3"><a
-                                                    th:href="${loginLink}"
+                                                    th:href="${resetConfirmLink}"
 
 
                                                     target="_blank"
