--- a/api/src/main/resources/templates/reset-password.html
+++ b/api/src/main/resources/templates/reset-password.html
@@ -63,7 +63,7 @@
 
                                                     target="_blank"
                                                     style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #00a0e3; display: inline-block;"
-                                                    th:text="#{login}"></a></td>
+                                                    th:text="#{confirm_reset}"></a></td>
                                         </tr>
                                     </table>
                                 </td>
