--- a/api/src/main/resources/templates/new-work-order.html
+++ b/api/src/main/resources/templates/new-work-order.html
@@ -32,7 +32,9 @@
                     <td bgcolor="#ffffff" align="center" valign="top"
                         style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
                         <h1 style="font-size: 48px; font-weight: 400; margin: 2;" th:text="#{newWorkOrder}"></h1> <img
-                            th:src="@{${environment.getProperty('api.host')} + '/images/logo.png'}"
+                            th:src="@{${environment.getProperty('white-labeling.logo-path') != null ?
+    environment.getProperty('api.host') + '/images/custom-logo.png' :
+    environment.getProperty('api.host') + '/images/logo.png'}}"
                             width="150" height="150" style="display: block; border: 0px;"/>
                     </td>
                 </tr>
