--- a/api/src/main/resources/templates/signup.html
+++ b/api/src/main/resources/templates/signup.html
@@ -31,9 +31,11 @@
                 <tr>
                     <td bgcolor="#ffffff" align="center" valign="top"
                         style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                        <h1 style="font-size: 48px; font-weight: 400; margin: 2;" th:text="#{welcome}"></h1> <img
-                            th:src="@{${environment.getProperty('white-labeling.logo-path') != null ? environment.getProperty('white-labeling.logo-path') : environment.getProperty('api.host') + '/images/logo.png'}}"
-                            width="150" height="150" style="display: block; border: 0px;"/>
+                        <h1 style="font-size: 48px; font-weight: 400; margin: 2;" th:text="#{welcome}"></h1><img
+                            th:src="@{${environment.getProperty('white-labeling.logo-paths') != null ?
+    environment.getProperty('api.host') + '/images/custom-logo.png' :
+    environment.getProperty('api.host') + '/images/logo.png'}}" width="150" height="150"
+                            style="display: block; border: 0px;"/>
                     </td>
                 </tr>
             </table>
