--- a/api/src/main/resources/templates/fragments/main-layout.html
+++ b/api/src/main/resources/templates/fragments/main-layout.html
@@ -55,7 +55,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left"
                             style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;" th:text="${messageText}"></p>
+                            <p style="margin: 0;" th:utext="${messageText}"></p>
                         </td>
                     </tr>
 
