--- a/api/src/main/resources/templates/invite.html
+++ b/api/src/main/resources/templates/invite.html
@@ -3,9 +3,9 @@
 <!--/*@thymesVar id="joinLink" type="java.lang.String"*/-->
 <!--/*@thymesVar id="featuresLink" type="java.lang.String"*/-->
 <div th:replace="fragments/main-layout :: emailTemplate(
-    #{inviteTitle},
-    #{inviteHeader},
-    #{inviteMessage(${inviter},${company})},
+    #{inviteTitle(${brandConfig.getName()})},
+    #{inviteHeader(${brandConfig.getName()})},
+    #{inviteMessage(${inviter},${company}, ${brandConfig.getShortName()})},
     #{joinCompany},
     ${joinLink},
     ${featuresLink}
