fix: handle null assigned users in labor section of work order report
Updated the template to check for null values before displaying the assigned user's full name, preventing errors when a labor entry has no assigned user.

--- a/api/src/main/resources/templates/work-order-report.html
+++ b/api/src/main/resources/templates/work-order-report.html
@@ -203,7 +203,7 @@
                     <th:block th:each="labor : ${labors}">
                         <div>
                             <strong th:text="#{user}+': '"> </strong> <span
-                                th:text="${labor.getAssignedTo().getFullName()}"></span>
+                                th:text="${labor.getAssignedTo() ==null ? '' : labor.getAssignedTo().getFullName()}"></span>
                         </div>
                         <div>
                             <strong th:text="#{duration}+': '"> </strong> <span
